benchmark: add filterSum